@@ -5,52 +5,37 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomerServiceImpl implements CustomerService {
 
-    private final CustomerRepository customerRepository;
-
     @Autowired
-    public CustomerServiceImpl(CustomerRepository customerRepository) {
-        this.customerRepository = customerRepository;
-    }
+    private CustomerRepository customerRepository;
 
     @Override
     public CustomerDTO saveCustomer(CustomerDTO customerDTO) {
-        // Convert DTO to entity
         Customer customer = CustomerMapper.toEntity(customerDTO);
-        // Save entity to database
         Customer savedCustomer = customerRepository.save(customer);
-        // Convert entity back to DTO
         return CustomerMapper.toDTO(savedCustomer);
     }
 
     @Override
     public Optional<CustomerDTO> getCustomerById(Long customerId) {
-        return customerRepository.findById(customerId)
-                .map(CustomerMapper::toDTO);
+        return customerRepository.findById(customerId).map(CustomerMapper::toDTO);
     }
 
     @Override
     public List<CustomerDTO> getAllCustomers() {
-        return customerRepository.findAll().stream()
-                .map(CustomerMapper::toDTO)
-                .collect(Collectors.toList());
+        return customerRepository.findAll().stream().map(CustomerMapper::toDTO).toList();
     }
 
     @Override
     public CustomerDTO updateCustomer(CustomerDTO customerDTO) {
-        // Check if the customer exists
         if (customerDTO.getId() == null || !customerRepository.existsById(customerDTO.getId())) {
             throw new IllegalArgumentException("Customer with ID " + customerDTO.getId() + " does not exist");
         }
-        // Convert DTO to entity
         Customer customer = CustomerMapper.toEntity(customerDTO);
-        // Update customer in database
         Customer updatedCustomer = customerRepository.save(customer);
-        // Convert entity back to DTO
         return CustomerMapper.toDTO(updatedCustomer);
     }
 
@@ -60,5 +45,21 @@ public class CustomerServiceImpl implements CustomerService {
             throw new IllegalArgumentException("Customer with ID " + customerId + " does not exist");
         }
         customerRepository.deleteById(customerId);
+    }
+
+    public Optional<CustomerDTO> findCustomerByEmail(String email) {
+        return customerRepository.findByEmail(email).map(CustomerMapper::toDTO);
+    }
+
+    public List<CustomerDTO> findCustomersByFirstName(String firstName) {
+        return customerRepository.findByFirstName(firstName).stream().map(CustomerMapper::toDTO).toList();
+    }
+
+    public List<CustomerDTO> findCustomersByLastName(String lastName) {
+        return customerRepository.findByLastName(lastName).stream().map(CustomerMapper::toDTO).toList();
+    }
+
+    public List<CustomerDTO> findCustomersByFirstNameAndLastName(String firstName, String lastName) {
+        return customerRepository.findByFirstNameAndLastName(firstName, lastName).stream().map(CustomerMapper::toDTO).toList();
     }
 }
